--- a/package.json
+++ b/package.json
@@ -23,26 +23,34 @@
     "prebuild": "npm run build:pegjs:ocamldoc && npm run format && npm run lint",
     "watch": "npm run prebuild && tsc -watch -p ./",
     "build": "tsc -p ./",
-    "build:pegjs:ocamldoc":
-      "shx mkdir -p bin/server/parser/ocamldoc && pegjs -o bin/server/parser/ocamldoc/grammar.js src/bin/server/parser/ocamldoc/grammar.pegjs",
+    "build:pegjs:ocamldoc": "shx mkdir -p bin/server/parser/ocamldoc && pegjs -o bin/server/parser/ocamldoc/grammar.js src/bin/server/parser/ocamldoc/grammar.pegjs",
     "format": "./node_modules/.bin/prettier --write \"src/**/*.ts\"",
     "lint": "tslint --project tsconfig.json",
     "prepare": "npm run build",
     "test": "jest"
   },
   "jest": {
-    "moduleFileExtensions": ["ts", "tsx", "js"],
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ],
     "transform": {
       "^.+\\.(ts|tsx)$": "ts-jest"
     },
-    "testMatch": ["**/__tests__/*.(ts|tsx|js)"]
+    "testMatch": [
+      "**/__tests__/*.(ts|tsx|js)"
+    ]
   },
   "main": "./lib/index.js",
   "typings": "./lib/index",
   "bin": {
     "ocaml-language-server": "./bin/server/index.js"
   },
-  "files": ["bin", "lib"],
+  "files": [
+    "bin",
+    "lib"
+  ],
   "devDependencies": {
     "@types/async": "2.0.48",
     "@types/deepmerge": "2.1.0",
